# xf86-video-omap

./: .gitignore  .gitlab-ci.yml  Makefile.am  autogen.sh  configure.ac
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  03-code-cleanup.yml  04-doc-update.yml  05-org-task.yml
.github/workflows/: build.yml
man/: Makefile.am  omap.man
src/: Makefile.am  compat-api.h  drmmode_display.c  omap_dri2.c  omap_driver.c  omap_driver.h  omap_exa.c  omap_exa.h  omap_exa_null.c  omap_exa_utils.c  omap_xv.c
